--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "@reduxjs/toolkit": "^2.2.3",
+    "@reduxjs/toolkit": "^2.2.4",
     "axios": "^1.6.8",
     "jail-monkey": "^2.8.0",
     "react": "18.2.0",
@@ -25,8 +26,9 @@
     "react-native-screens": "^3.30.1",
     "react-native-ultimate-config": "^6.0.1",
     "react-native-vector-icons": "^10.0.3",
-    "react-redux": "^9.1.0",
+    "react-redux": "^9.1.2",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0"
   },
   "devDependencies": {
